<resources>
    <string name="app_name">Hurl 2.0</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="create_accountt">Create account</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="usernamee">Username</string>
    <string name="passworddd">Password</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="usernameeee">Username</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="passwordddd">Password</string>
    <string name="loginnn">Login</string>
    <string name="menu">Menu</string>
    <string name="full_namee">Full Name</string>
    <string name="post">Post</string>
    <string name="share_something_fun_and_exciting">Share something fun and exciting !</string>
    <string name="my_profile">My Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="email_addresss">Email Address</string>
    <string name="passworddddd">Password</string>
    <string name="full_nameeee">Full Name</string>
    <string name="usernameee">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_inn">Sign in</string>
    <string name="welcome_to_hurl">Welcome to Hurl</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="hurl_2_0">Hurl 2.0</string>
    <string name="welcome_to_hurll">Welcome to Hurl</string>
    <string name="menuu">Menu</string>
    <string name="my_profilee">MY PROFILE</string>
    <string name="timeline">TIMELINE</string>
    <string name="create_post">CREATE POST</string>
    <string name="my_posts">MY POSTS</string>
    <string name="menuuu">Menu</string>
    <string name="general_timeline">General Timeline</string>
    <string name="my_postss">My Posts</string>
    <string name="menuuuu">Menu</string>
    <string name="usernameeeee">Username</string>
    <string name="welcome">Welcome,</string>
    <string name="update_profile">Update Profile</string>
    <string name="usernamefield">Username</string>
    <string name="full_nameee">Full Name:</string>
    <string name="emailfield">Email:</string>
    <string name="usernamefieldd">Username:</string>
    <string name="passwordfield">Password:</string>
    <string name="hiddenpw">**********</string>
    <string name="created_date">Created date:</string>
    <string name="registered_date">Registered Date</string>
    <string name="email_addressfield">Email Address</string>
    <string name="full_namefield">Full Name</string>
    <string name="namefield">Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="menufield">Menu</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="name">Name</string>
    <string name="posted_on">Posted on</string>
    <string name="descriptionfield">Description</string>
    <string name="datefield">Date</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>
    <string name="introducing_hurl_2_0_here_you_can_create_post_and_share_it_among_other_users_you_can_view_posts_from_other_users_too_share_you_thoughts_and_get_socialized">Introducing Hurl 2.0. Here you can create post and share it among other users. You can view posts from other users too. Share you thoughts and get socialized !</string>
    <string name="update">Update</string>
</resources>