<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:background="@drawable/profilebg1">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="247dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:drawablePadding="5dp"
        android:text="@string/menuuuu"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_profile_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/my_fname4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:padding="7dp"
        android:text="@string/usernameeeee"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:drawablePadding="10dp"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/my_profile_update"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:backgroundTint="#8d0dac"
        android:text="@string/update_profile"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/my_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:padding="7dp"
        android:text="@string/usernamefield"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:drawableStart="@drawable/fullname"
        android:drawablePadding="10dp"
        android:text="@string/full_nameee"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:text="@string/emailfield"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:drawableStart="@drawable/username"
        android:drawablePadding="10dp"
        android:text="@string/usernamefieldd"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:text="@string/passwordfield"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/pwhidden"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:padding="7dp"
        android:text="@string/hiddenpw"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:drawableStart="@drawable/dcreate"
        android:drawablePadding="10dp"
        android:text="@string/created_date"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/my_day_register"
        android:layout_width="196dp"
        android:layout_height="94dp"
        android:padding="7dp"
        android:text="@string/registered_date"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />

    <TextView
        android:id="@+id/my_email"
        android:layout_width="209dp"
        android:layout_height="67dp"
        android:padding="7dp"
        android:text="@string/email_addressfield"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/my_fullname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:padding="7dp"
        android:text="@string/full_namefield"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />


</androidx.constraintlayout.widget.ConstraintLayout>

