<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in"
        android:textColor="#000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signin_unameview"
        android:layout_width="162dp"
        android:layout_height="22dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="183dp"
        android:text="@string/username"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signin_pwview"
        android:layout_width="162dp"
        android:layout_height="22dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="340dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/signin_upperview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="234dp"
        android:layout_below="@+id/signin_upperview"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="-10dp">

        <EditText
            android:id="@+id/signin_enterusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="13dp"
            android:textSize="25sp"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <EditText
            android:id="@+id/signin_enterpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="13dp"
            android:textSize="25sp"
            tools:ignore="Autofill,LabelFor,TextFields" />

    </LinearLayout>

    <Button
        android:id="@+id/signin_loginbtn"
        android:layout_width="343dp"
        android:layout_height="74dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="#8d0dac"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/signin_createaccount"
        android:layout_width="162dp"
        android:layout_height="22dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="670dp"
        android:text="@string/create_account"
        android:textColor="#8d0dac"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>