<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200sp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/postdesign"
    android:elevation="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/upost_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:paddingStart="5dp"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/upost_description"
        android:layout_width="326dp"
        android:layout_height="74dp"
        android:gravity="start"
        android:text="@string/descriptionfield"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upost_date"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:text="@string/datefield"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/single_post_name4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/posted_on"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="31dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/delete"
        android:backgroundTint="#D70040"
        app:layout_constraintEnd_toStartOf="@+id/single_post_name4"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upost_description" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/edit"
        android:backgroundTint="#088F8F"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/upost_description" />

</androidx.constraintlayout.widget.ConstraintLayout>