<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/a12">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/a12"
        tools:context="com.example.hurl2_0.MainActivity">
        <Button
            android:id="@+id/button"
            android:layout_width="360dp"
            android:layout_height="72dp"
            android:backgroundTint="#fff"
            android:text="@string/sign_inn"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.854" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:fontFamily="@font/roughmotion"
            android:text="@string/welcome_to_hurl"
            android:textColor="#fff"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.518" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/admin"
        android:layout_width="117dp"
        android:layout_height="22dp"
        android:drawableStart="@drawable/ic_baseline_admin_panel_settings_24"
        android:drawablePadding="5dp"
        android:text="@string/admin_panel"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="126dp"
        android:fontFamily="@font/poppins"
        android:text="@string/introducing_hurl_2_0_here_you_can_create_post_and_share_it_among_other_users_you_can_view_posts_from_other_users_too_share_you_thoughts_and_get_socialized"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

</androidx.constraintlayout.widget.ConstraintLayout>