<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreatePost"
    android:background="@drawable/cpostbg">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="247dp"
        android:layout_height="25dp"
        android:drawablePadding="5dp"
        android:text="@string/menu"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/my_fullname2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:padding="7dp"
        android:text="@string/full_namee"
        android:textColor="#000"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/add_post_btn"
        android:layout_width="136dp"
        android:layout_height="56dp"
        android:backgroundTint="#8d0dac"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <EditText
        android:id="@+id/add_post_content"
        android:layout_width="351dp"
        android:layout_height="377dp"
        android:gravity="top"
        android:hint="@string/share_something_fun_and_exciting"
        android:lines="10"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658"
        tools:ignore="Autofill,TextFields" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="58dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>